trying to do it again with deposit js and custom js function

--- a/bank.html
+++ b/bank.html
@@ -42,6 +42,8 @@
     <footer class="bg-indigo-500 p-4">
       <p class="text-white text-center font-bold">Copyright &copy; 2023</p>
     </footer>
+    <script src="js/deposit.js"></script>
+    <script src="js/withdraw.js"></script>
     <script src="js/custom.js"></script>
   </body>
 </html>
